--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.36"
-    kapt "com.google.dagger:hilt-compiler:2.36"
+    implementation 'com.google.dagger:hilt-android:2.40.4'
+    kapt 'com.google.dagger:hilt-compiler:2.40.4'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
