--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.recyclerview:recyclerview-selection:1.2.0-alpha01"
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     // Navigation
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
